# starpc

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .golangci.yml  .ignore  .protoc-manifest.json  CMakeLists.txt  Cargo.toml  GET_STARTED_CPP.md  GET_STARTED_GO.md  GET_STARTED_RUST.md  GET_STARTED_TYPESCRIPT.md  LICENSE  Makefile  README.md  TODO  cpp-deps.go  cpp_deps.go  deps.go  embed.go  eslint.config.js  go.mod  go.sum  index.ts  no_raw_println_test.go  package.json  sonar-project.properties  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/: renovate.json
.github/workflows/: codeql-analysis.yml  release.yml  sonar-cloud.yaml  tests.yml
.opencode/knowledge/: cross-language-integration.md
cmd/protoc-gen-es-starpc/: plugin.ts  protoc-gen-es-starpc  protoc-gen-es-starpc.ts  typescript.ts
cmd/protoc-gen-go-starpc/: .gitignore  LICENSE.drpc  main.go
cmd/protoc-gen-starpc-cpp/: generator.go  main.go
cmd/protoc-gen-starpc-rust/: generator.go  main.go
doc/: overview.md
e2e/: .gitignore  README.md  e2e.ts  e2e_test.go
e2e/mock/: mock.connect.pb.ts  mock.pb.go  mock.pb.ts  mock_pb.ts  mock_srpc.pb.go  mock_srpc.pb.ts  mock_vtproto.pb.go
echo/: Cargo.toml  build.rs  client-test.ts  echo.go  echo.pb.cc  echo.pb.go  echo.pb.h  echo.pb.rs  echo.pb.ts  echo.proto  echo.starpc-draft.pb.ts  echo.ts  echo_e2e_test.cpp  echo_pb.ts  echo_srpc.pb.cpp  echo_srpc.pb.go  echo_srpc.pb.hpp  echo_srpc.pb.rs  echo_srpc.pb.ts  echo_vtproto.pb.go  index.ts  integration_client.rs  integration_server.rs  main.rs  server.go  server.ts
example/: .gitignore  example.go  package.json
hack/: go.mod  go.sum  tools.go  tools.js
integration/: .gitignore  integration.bash  integration.go  integration.ts  integration_srpc.pb.go  tsconfig.json
integration/cross-language/: cpp-client.cpp  cpp-server.cpp  run.bash  ts-client.ts  ts-server.ts
integration/cross-language/go-client/: main.go
integration/cross-language/go-server/: fixture-owner_test.go  main.go
internal/contextutil/: with-cancel-tinygo.go  with-cancel.go  with-cancel_test.go
mock/: index.ts  mock.go  mock.pb.cc  mock.pb.go  mock.pb.h  mock.pb.rs  mock.pb.ts  mock.proto  mock_srpc.pb.cpp  mock_srpc.pb.go  mock_srpc.pb.hpp  mock_srpc.pb.rs  mock_srpc.pb.ts
patches/: @bufbuild+protoc-gen-es+1.8.0.patch  @libp2p+mplex+1.2.1.patch  @libp2p+mplex+2.0.0.patch  ts-poet+4.12.0.patch  ts-poet+4.13.0.patch  ts-poet+4.14.0.patch  ts-poet+4.15.0.patch  ts-poet+6.1.0.patch  ts-proto+1.115.5.patch  ts-proto+1.116.0.patch  ts-proto+1.126.1.patch
rpcstream/: README.md  errors.go  index.ts  mod.rs  proxy.go  raw-stream.go  read-pump.hpp  read-writer.go  receipt.test.ts  receipt_test.go  rpcstream.cpp  rpcstream.go  rpcstream.hpp  rpcstream.pb.cc  rpcstream.pb.go  rpcstream.pb.h  rpcstream.pb.rs  rpcstream.pb.ts  rpcstream.proto  rpcstream.rs  rpcstream.ts  rpcstream_pb.ts  rpcstream_test.go  rpcstream_vtproto.pb.go  writer.go  writer.hpp  writer.rs
rs/src/: lib.rs
scripts/: release-command.test.ts  release-prepare.ts  release-publish.test.ts  release-publish.ts  release-tag.test.ts  release-tag.ts  release-verify-commit.test.ts  release-verify-commit.ts  release-version.ts
src/: gen.bash
src/google/protobuf/: any.proto  any_pb.ts  api.proto  api_pb.ts  descriptor.proto  descriptor_pb.ts  duration.proto  duration_pb.ts  empty.proto  empty_pb.ts  source_context.proto  source_context_pb.ts  struct.proto  struct_pb.ts  timestamp.proto  timestamp_pb.ts  type.proto  type_pb.ts  wrappers.proto  wrappers_pb.ts
src/google/protobuf/compiler/: plugin_pb.ts
srpc/: CMakeLists.txt  Cargo.toml  accept.go  aptre-yamux.d.ts  array-list.ts  broadcast-channel.ts  build.rs  call-receipt-e2e_test.go  call-receipt.go  call-receipt.test.ts  call-receipt.ts  call-receipt_test.go  channel.test.ts  channel.ts  client-invoker.go  client-prefix.go  client-rpc.cpp  client-rpc.go  client-rpc.hpp  client-rpc.ts  client-set.go  client-verbose.go  client.cpp  client.go  client.hpp  client.rs  client.ts  codec.rs  common-rpc.cpp  common-rpc.go  common-rpc.hpp  common-rpc.test.ts  common-rpc.ts  common-rpc_test.go  conn-duplex.ts  conn-stream.ts  conn.go  conn.ts  debug.ts  definition.ts  (+108 more)
srpc/proto/: mod.rs
srpc/rpcstream/: mod.rs  proto.rs  stream.rs  writer.rs
srpc/tests/: integration_test.rs
starpc-build/src/: generator.rs
tests/: websocket_yamux_transport.rs
tools/: go.mod  go.sum  tools.go
