[package]
name = "starpc"
version = "0.49.6"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/aperturerobotics/starpc"
description = "Streaming protobuf RPC framework"
keywords = ["rpc", "protobuf", "streaming", "grpc"]
categories = ["network-programming", "asynchronous"]
include = ["srpc/**/*.rs", "rpcstream/*.rs", "Cargo.toml", "LICENSE", "!node_modules/**", "!vendor/**"]

[lib]
path = "srpc/lib.rs"

[workspace]
resolver = "2"
members = ["echo"]

[workspace.package]
version = "0.49.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
starpc = { path = "." }
prost = "0.14"
bytes = "1.9"
tokio = { version = "1", features = ["io-util", "sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
thiserror = "2.0"
async-trait = "0.1"
pin-project-lite = "0.2"
scopeguard = "1.2"

[dependencies]
prost = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
pin-project-lite = { workspace = true }
scopeguard = { workspace = true }
