[package]
name = "echo-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "echo-example"
path = "main.rs"

[[bin]]
name = "integration-server"
path = "integration_server.rs"

[[bin]]
name = "integration-client"
path = "integration_client.rs"

[dependencies]
starpc = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["full"] }
async-trait = { workspace = true }
